--- a/views/albums/index.ejs
+++ b/views/albums/index.ejs
@@ -1,6 +1,6 @@
 
 <% var page='' %>
-<%include shared/header%>
+<%include ../shared/header%>
 <div class="header-home">
     <div class="title-home">
         <h2>Vinyl Records</h2>
@@ -26,6 +26,4 @@
         <h3>Recent Reviews</h3>
     </div>
 </div>
-
-
-<%include shared/footer%>
+<%include ../shared/footer%>
