--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -5,7 +5,7 @@
         <div class="col s4 offset-s4">
             <h3>Sign Up for Vinyl</h3>
             <div class="divider margin-bottom"></div>
-            <form action="/users/signup" method="POST">
+            <form action="/auth/signup" method="POST">
             <div class="row">
                     <div class="input-field col s12">
                         <input type="text" name="name" id="name" placeholder="John Smith" class="validate">
