--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -5,7 +5,7 @@
         <div class="col s4 offset-s4">
             <h3>Sign In</h3>
             <div class="divider margin-bottom"></div>
-            <form action="/users/signin" method="POST">
+            <form action="/auth/signin" method="POST">
                 <div class="row">
                         <div class="input-field">
                             <input type="text" name="email" id="email" placeholder="john@smith.com"/>
