--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -2,7 +2,7 @@
 <%include ../shared/header%>
 <div class="row">
     <div class="col s4 center-align">
-        <img class="large-margin-top" src="https://api.adorable.io/avatars/285/hsmcdonald@gmail.com.png"/>
+        <img class="large-margin-top" src="https://api.adorable.io/avatars/285/<%= user.email || 'user@email.com' %>.png"/>
     </div>
     <div class="col s8">
         <h2 class="cyan-text large-margin-top">
