--- a/views/users/newreview.ejs
+++ b/views/users/newreview.ejs
@@ -11,16 +11,17 @@
       <div class="row">
         <div class="col s12">
           <div class="input-field">
-            <textarea class="materialize-textarea" placeholder="Enter your review..." data-length="255"></textarea>
+            <textarea class="materialize-textarea" placeholder="Enter your review..." data-length="255" name="review"></textarea>
           </div>
         </div>
       </div>
-    </form>
-    <div class="row">
-      <div class="col s12 right-align">
-        <input type="submit" class="btn" value="Submit">
+      <div class="row">
+        <div class="col s12 right-align">
+          <input type="submit" class="btn" value="Submit">
+        </div>
       </div>
-    </div>
+      <input type="hidden" name="albumId" value="<%= album.id %>">
+    </form>
   </div>
 </div>
 <%include ../shared/footer%>
