--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,5 +1,5 @@
 <% var page='Sign Up' %>
-<%include ../shared/header%>
+<% include ../partials/header %>
 <div class="valign-wrapper full-height">
     <div class="row full-width">
         <div class="col s4 offset-s4">
@@ -25,4 +25,4 @@
         </div>
     </div>
 </div>
-<%include ../shared/footer%>
+<% include ../partials/footer %>
