--- a/views/albums/album.ejs
+++ b/views/albums/album.ejs
@@ -1,5 +1,5 @@
 <% var page='' %>
-<%include ../shared/header%>
+<% include ../partials/header %>
 <div class="row">
   <div class="col s6 offset-s3">
     <div class="row large-margin-top">
@@ -13,11 +13,18 @@
         <h4>Reviews</h4>
       </div>
       <div class="col s6 right-align">
+        <% if (user.id) { %> 
         <h4>
           <a class="btn" href="/users/newreview/<%= album.id %>">Add Review</a>
         </h4>
+        <% } %>
       </div>
+    </div>
+    <div class="margin-left">
+      <% reviews.forEach(function(review) { %>
+          <% include ../partials/review %>
+      <%})%>    
     </div>
   </div>
 </div>
-<%include ../shared/footer%>
+<% include ../partials/footer %>
