--- a/views/users/newreview.ejs
+++ b/views/users/newreview.ejs
@@ -1,5 +1,5 @@
 <% var page='New Review' %>
-<%include ../shared/header%>
+<% include ../partials/header %>
 <div class="row">
   <div class="col s6 offset-s3">
     <div class="row large-margin-top">
@@ -7,7 +7,7 @@
         <h3 >New review for <span class="cyan-text"><%= album.title %></span></h3>
       </div>
     </div>
-    <form action="/albums/newreview" method="POST">
+    <form action="/users/newreview" method="POST">
       <div class="row">
         <div class="col s12">
           <div class="input-field">
@@ -24,4 +24,4 @@
     </form>
   </div>
 </div>
-<%include ../shared/footer%>
+<% include ../partials/footer %>
