--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,5 +1,5 @@
 <% var page='' %>
-<%include ../shared/header%>
+<% include ../partials/header %>
 <div class="row">
     <div class="col s4 center-align">
         <img class="large-margin-top" src="https://api.adorable.io/avatars/285/<%= user.email || 'user@email.com' %>.png"/>
@@ -29,4 +29,4 @@
         </h2>
     </div>
 </div>
-<%include ../shared/footer%>
+<% include ../partials/footer %>
