Fix bugs found in testing.

--- a/views/albums/album.ejs
+++ b/views/albums/album.ejs
@@ -21,9 +21,7 @@
       </div>
     </div>
     <div class="margin-left">
-      <% reviews.forEach(function(review) { %>
-          <% include ../partials/review %>
-      <%})%>    
+      <% include ../partials/reviews %>
     </div>
   </div>
 </div>
