--- a/views/albums/index.ejs
+++ b/views/albums/index.ejs
@@ -25,9 +25,7 @@
     <div class="col s9">
         <h3>Recent Reviews</h3>
         <div class="margin-left">
-            <% reviews.forEach(function(review) { %>
-                <% include ../partials/review %>
-            <%})%>    
+            <% include ../partials/reviews %>
         </div>
     </div>
 </div>
