--- a/views/partials/review.ejs
+++ b/views/partials/review.ejs
@@ -2,7 +2,7 @@
     <div class="col s10">
         <div class="row">
             <div class="col s8"><h5><u><a href='/albums/<%= review.albumid %>'><%= review.title %></a></u></h5></div>
-            <div class="col s4"><h6><i><%= review.reviewDate %></i></h6></div>
+            <div class="col s4 right-align"><h6 class="small-margin-top"><i><%= review.reviewDate %></i></h6></div>
         </div>
          <div class="row">
             <div class="col s12 grey-text text-darken-4"><i><%= review.text %></i></div>
