--- a/views/users/newreview.ejs
+++ b/views/users/newreview.ejs
@@ -7,11 +7,11 @@
         <h3 >New review for <span class="cyan-text"><%= album.title %></span></h3>
       </div>
     </div>
-    <form action="/users/newreview" method="POST">
+    <form action="/reviews/newreview" method="POST">
       <div class="row">
         <div class="col s12">
           <div class="input-field">
-            <textarea class="materialize-textarea" placeholder="Enter your review..." data-length="255" name="review"></textarea>
+            <textarea id="review-text" class="materialize-textarea" placeholder="Enter your review..." data-length="250" name="review"></textarea>
           </div>
         </div>
       </div>
