--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,10 +1,11 @@
-<% var page='' %>
+<% var page='Profile' %>
 <% include ../partials/header %>
 <div class="row">
-    <div class="col s4 center-align">
+    <div class="col s1"></div>
+    <div class="col s3 center-align">
         <img class="large-margin-top" src="https://api.adorable.io/avatars/285/<%= user.email || 'user@email.com' %>.png"/>
     </div>
-    <div class="col s8">
+    <div class="col s7">
         <h2 class="cyan-text large-margin-top">
             <%= user.name || 'User' %>
         </h2>
@@ -28,10 +29,9 @@
             Reviews
         </h2>
         <div class="margin-left">
-            <% reviews.forEach(function(review) { %>
-                <% include ../partials/review %>
-            <%})%>    
+            <% include ../partials/reviews %> 
         </div>
     </div>
+    <div class="col s1"></div>
 </div>
 <% include ../partials/footer %>
