Add delete review.

--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -2,7 +2,7 @@
 <% include ../partials/header %>
 <div class="row">
     <div class="col s1"></div>
-    <div class="col s3 center-align">
+    <div class="col s3">
         <img class="large-margin-top" src="https://api.adorable.io/avatars/285/<%= user.email || 'user@email.com' %>.png"/>
     </div>
     <div class="col s7">
