--- a/views/partials/review.ejs
+++ b/views/partials/review.ejs
@@ -13,7 +13,18 @@
     </div>
     <% if (user.id && page == 'Profile') { %>
         <div class="col s2 grey lighten-3 delete-box center-align">
-            <i class="margin-top fa fa-trash fa-2x"></i>
+            <i class="margin-top fa fa-trash fa-2x mouseover" onClick="$('#modal_<%= review.id %>').modal('open')"></i>
+        </div>
+        <div id="modal_<%= review.id %>" class="modal">
+            <div class="modal-content">
+                <h4>Are you sure you want to delete this review?</h4>
+                <div class="grey-text text-darken-4"><i><%= review.text %></i></div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat red-text">Cancel</a>
+                <a href="/reviews/delete/<%= review.id %>" class="modal-action modal-close waves-effect waves-green btn-flat green-text text-darken-3">Agree</a>
+            </div>
         </div>
     <% } %>
+
 </div>
